projects/compiler/test/parser/decoratordecl_error_bad_trait.4.out
Error at %FILE_NAME%:1:26
Unexpected token '?':
  |  decorator FooBar123 : Foo? {
                              ^