projects/compiler/test/parser/decoratordecl_error_bad_trait.4.abra
decorator FooBar123 : Foo? {

}
